fixed max columns validation and errors alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,7 +121,6 @@ fieldset {
 
 .errors {
     text-align: left;
-    text-indent: 10%;
     color: #a40000;
     font-size: 12px;
 }
